# Otus

./: CMakeLists.txt  test_version.cpp
.github/workflows/: release.yml
